
	* Fixed bug #7295: sysext/dbal/: Uninitialized variable in ->handler_getFromTableList() (Patch by Oliver Klee)
	* Added feature #2988: Enable EXPLAIN SELECT in TS admin panel

2008-02-04  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #5242: IRRE - Storage page for child records
	* (minor) Fixed bug #7029: tslib_cObj uses deprecated function call_user_method

2008-02-03  Dmitry Dulepov  <dmitry@typo3.org>

	* MSIE fixes for #7336 (by Jeff Segars)

2008-02-03  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #6087: IRRE - Localization of child records
		!!! Full review by a core developer before TYPO3 4.2-RC1 required  

2008-02-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Followup to #7282: Username is now only linked to user setup if the module is accessible, thanks to Steffen Kamper
	* Followup to #7361: Using label tags in setup module

2008-02-03  Benjamin Mack  <mack@xnos.org>

	* Followup to #7361: Reset button has now a JS confirm question
	* Followup to #7346: opendocs top menu only is included once now
	* Feature #7346: Added "Open Documents" menu in top bar of new BE, made module optional
	* Followup to #7361: Save button was moved to bottom again
	* Followup to #7361: One CSH was still on the wrong line
	* Fixed #7361: Overhauled User setup module. Now has tabs and better usability, thanks to Steffen Kamper

2008-02-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #5152: "Duplicate entry" in cache_pagesection by rewriting parts of t3lib_TStemplate and tslib_fe::getFromCache()
	* Code cleanup subsequent to #5152
	* Reverted feature #7337 because it is faulty and lacks proper documentation

2008-02-03  Ingo Renner  <ingo@typo3.org>

	 * fixed a positioning issue with the toolbar items in Safari
	 * added feature #7282: Show Realname of BE-User if available and link it to edit, credits Steffen Kamper
	 * fixed alignment of user name and icon in the toolbar
	 * adjusted non-t3skin module menu width to fit the wider div