@@ -82,6 +82,7 @@ Development
 		-> Web>List module: Allow modification/addition/removal of icons for each table and its records
 		-> Hook in TCEmain after all database operations
 		-> Some Hooks for tslib_content
+		-> Added hooks to t3lib_TCEforms_inline to manipulate control items for each child record
 
 TypoScript changes
 ==================
