@@ -11,6 +11,7 @@
 
 	* (feature) Added feature #5242: IRRE - Storage page for child records
 	* (minor) Fixed bug #7029: tslib_cObj uses deprecated function call_user_method
+	* (feature) Added feature #6472: IRRE - Possibility to manipulate control items for each child records
 
 2008-02-03  Dmitry Dulepov  <dmitry@typo3.org>
 
